--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   get_it: ^4.0.2
 #   for responsiveness
   sizer: ^1.1.8
+# for loader
+  flutter_spinkit: ^4.1.2
+# graphQl client
+  graphql_flutter: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -72,17 +76,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: BasisGrotesquePro
+      fonts:
+        - asset: assets/fonts/BasisGrotesquePro-Bold.ttf
+#        - asset: assets/fonts/BasisGrotesquePro-Light.ttf
+        - asset: assets/fonts/BasisGrotesquePro-Regular.ttf
+#     - family: Trajan Pro
+#       fonts:
+#         - asset: fonts/TrajanPro.ttf
+#         - asset: fonts/TrajanPro_Bold.ttf
+#           weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
